test_suite/alan-2022-examples/failing/005190_mutation.alan
source Q0 begin leave G8 if 1 then relax end G end
